[gd_scene load_steps=2 format=3 uid="uid://browser_app"]

[ext_resource type="Script" path="res://gameplay/desktop/apps/browser_app.gd" id="1_browser"]

[node name="BrowserApp" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_browser")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="NavigationBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="BackButton" type="Button" parent="VBoxContainer/NavigationBar"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "â—„"

[node name="ForwardButton" type="Button" parent="VBoxContainer/NavigationBar"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "â–º"

[node name="RefreshButton" type="Button" parent="VBoxContainer/NavigationBar"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "âŸ³"

[node name="URLBar" type="LineEdit" parent="VBoxContainer/NavigationBar"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter URL or search..."

[node name="SecurityIndicator" type="Label" parent="VBoxContainer/NavigationBar"]
layout_mode = 2
text = "ðŸ”’"

[node name="Content" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PageContent" type="RichTextLabel" parent="VBoxContainer/Content/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center][b]Web Browser[/b]

Enter a URL to browse websites.

Example sites:
â€¢ www.maybank2u.com.my
â€¢ www.pos.com.my  
â€¢ www.facebook.com[/center]"

[connection signal="text_submitted" from="VBoxContainer/NavigationBar/URLBar" to="." method="_on_url_submitted"]
